# miniqubit

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  doxygen
MiniQbt/: CMakeLists.txt
MiniQbt/include/miniqbt/: MiniQbt.hpp
MiniQbt/include/miniqbt/emulator/: MiniQbtEmulator.hpp  PauliGates.hpp  PhaseGates.hpp
MiniQbt/include/miniqbt/emulator/tools/: ChanceOrder.hpp  Utils.hpp
MiniQbt/include/miniqbt/intepreter/: ClassicRegister.hpp  QasmAsyncIntepreter.hpp  RegisterComposite.hpp  TokenVisitor.hpp  Tokens.hpp
MiniQbt/src/: QasmAsyncIntepreter.cpp  TokenParser.cpp  TokenVisitor.cpp  Tokens.cpp
MiniQbt/tests/Emulator/: BellTests.cpp  CMakeLists.txt  GroverTests.cpp  ShorTests.cpp
MiniQbt/tests/Emulator/multiple_qubits_gates_and_entangled_states/: GHZStates.cpp
MiniQbt/tests/Emulator/quantum_algorithms/: GroverTests.cpp
MiniQbt/tests/IntepreterTests/: CMakeLists.txt  SimpleAsyncTests.cpp  SyntaxTests.cpp
PyMiniQbt/: CMakeLists.txt  MiniQbt.cpp  (+1 more)
doc/: CMakeLists.txt  doxygen.in
doc/html/: _basic_circuits_8cpp.html  _bell_tests_8cpp.html  _c_h_a_n_g_e_l_o_g_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _chance_order_8hpp.html  _chance_order_8hpp_source.html  _classic_register_8cpp.html  _classic_register_8hpp.html  _classic_register_8hpp_source.html  _controlled_not_gate_8hpp.html  _controlled_not_gate_8hpp_source.html  _exceptions_8hpp.html  _exceptions_8hpp_source.html  _g_h_z_states_8cpp.html  _globals_8py.html  _grover_tests_8cpp.html  _hadamard_gate_8hpp.html  _hadamard_gate_8hpp_source.html  _hadamard_test_8cpp.html  _intepreter_8py.html  _interpreter_8py.html  _measure_8hpp.html  _measure_8hpp_source.html  _mini_qbt_2____init_____8py.html  _mini_qbt_8cpp.html  _mini_qbt_emulator_8hpp.html  _mini_qbt_emulator_8hpp_source.html  _pauli_gates_8hpp.html  _pauli_gates_8hpp_source.html  _phase_gates_8hpp.html  _phase_gates_8hpp_source.html  _qasm_async_intepreter_8cpp.html  _qasm_async_intepreter_8hpp.html  _qasm_async_intepreter_8hpp_source.html  _qasm_async_interpreter_8cpp.html  _qasm_async_interpreter_8hpp.html  _qasm_async_interpreter_8hpp_source.html  _quantum_state_8hpp.html  _quantum_state_8hpp_source.html  _r_e_a_d_m_e_8md.html  (+201 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  classes_4.js  (+172 more)
examples/cpp/cli/: CMakeLists.txt  Main.cpp  Utils.hpp
lib/: CMakeLists.txt  MiniQbt.hpp
lib/MiniQbtEmulator/: MiniQbtEmulator.hpp
lib/QasmIntepreter/: CMakeLists.txt
lib/QasmIntepreter/include/: QasmAsyncIntepreter.hpp
lib/QasmIntepreter/include/core/: RegisterComposite.hpp  TokenParser.hpp  TokenVisitor.hpp  Tokens.hpp
lib/QasmIntepreter/src/: ClassicRegister.cpp  QasmAsyncIntepreter.cpp  TokenParser.cpp  TokenVisitor.cpp  Tokens.cpp
lib/core/: ControlledNotGate.hpp  Exceptions.hpp  HadamardGate.hpp  Measure.hpp  PauliGates.hpp  QuantumState.hpp
lib/core/tools/: ChanceOrder.hpp  Utils.hpp
lib/include/: Exceptions.hpp  Gates.hpp  QuantumState.hpp  Utils.hpp
lib/src/: Gates.cpp  QuantumState.cpp
modules/core/: CMakeLists.txt  version.cmake
modules/core/cmake/: Config.cmake.in  MiniQbt.hpp.in  Version.cmake.in
modules/core/include/miniqbt/: MiniQbt.hpp
modules/core/include/miniqbt/emulator/: ControlledNotGate.hpp  Exceptions.hpp  HadamardGate.hpp  Measure.hpp  MiniQbtEmulator.hpp  PauliGates.hpp  PhaseGates.hpp  QuantumState.hpp
modules/core/include/miniqbt/intepreter/: QasmAsyncIntepreter.hpp  TokenParser.hpp  TokenVisitor.hpp  Tokens.hpp
modules/core/include/miniqbt/interpreter/: ClassicRegister.hpp  QasmAsyncInterpreter.hpp  QuantumResult.hpp  RegisterComposite.hpp  TokenVisitor.hpp  Tokens.hpp
modules/core/src/: ClassicRegister.cpp  Emscripten.cpp  QasmAsyncIntepreter.cpp  QasmAsyncInterpreter.cpp  QuantumResult.cpp  TokenParser.cpp  TokenVisitor.cpp  Tokens.cpp
modules/core/src/exceptions/: InterpreterExceptions.cpp
modules/core/tests/: CMakeLists.txt
modules/core/tests/Emulator/: CMakeLists.txt  HadamardTest.cpp
modules/core/tests/IntepreterTests/: CMakeLists.txt  ResultChecks.cpp
modules/core/tests/InterpreterTests/: CMakeLists.txt  ResultChecks.cpp  SimpleAsyncTests.cpp  SyntaxTests.cpp
modules/java/: CMakeLists.txt
modules/java/javaBindings/: CMakeLists.txt
modules/java/javaBindings/src/: Globals.java  QasmAsyncInterpreter.java  QuantumResult.java
modules/java/javaNativeMiniQbt/: CMakeLists.txt
modules/java/javaNativeMiniQbt/include/: MiniQbtGlobals.hpp  MiniQbtQasmAsyncInterpreter.hpp
modules/java/javaNativeMiniQbt/src/: MiniQbtGlobals.cpp  MiniQbtQasmAsyncInterpreter.cpp
modules/java/src/cpp/: MiniQbtWrapper.cpp  MiniQbtWrapper.hpp
modules/java/src/java/: Globals.java  QasmAsyncInterpreter.java
modules/python/: CMakeLists.txt  MiniQbt.cpp  setup.py
modules/python/MiniQbt/: Globals.py  Intepreter.py  Interpreter.py  __init__.py
modules/python/src/: PyMiniQbt.cpp
modules/python/tests/: abuse_qasm_emulator_tests.py  main.py  multi_threaded_tests.py  native_tests_without_allocating.py  test.py
runtime/: CMakeLists.txt  Main.cpp  RegisterDelegate.hpp  TokenReaders.cpp  TokenReaders.hpp  TokenVisitor.cpp  TokenVisitor.hpp  Tokens.cpp  Tokens.hpp  Utils.hpp
tests/: AlghoritmsTest.cpp  BasicCircuits.cpp  CMakeLists.txt  GroverTests.cpp  HadamardTest.cpp  ShorTests.cpp  SingleQubitTests.cpp  learningParity.cpp
tests/Emulator/: CMakeLists.txt  GroverTests.cpp  HadamardTest.cpp  ShorTests.cpp  SingleQubitTests.cpp  learningParity.cpp
tests/IntepreterTests/: CMakeLists.txt  SimpleAsyncTests.cpp
tests/cmake/: externalCatch.cmake
tests/core/: BasicCircuits.cpp  CMakeLists.txt  HadamardTest.cpp  SingleQubitTests.cpp  TestSettings.hpp
(+38 files in other folders)
